src/test/deca/syntax/invalid/self/open_brace.deca
// Description:
//    tests de programme lexicalement correct mais syntaxiquement incorrect
//
// Resultats:
//    Ligne 11 : Erreur de syntaxe.
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 05/01/2022

{c